# cortex

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
cortex/: __init__.py  annotate.py  capture.py  cli.py  events.py  orchestrator.py  scene.py
cortex/agents/: __init__.py  actor.py  base.py  critic.py  perception.py  planner.py
cortex/llm/: __init__.py  anthropic_client.py  base.py  groq_client.py  groq_vision_client.py  mock_client.py
cortex/skills/: __init__.py  registry.py  simulated.py
examples/: README.md  make_scene.py
tests/: test_anthropic_client.py  test_groq_client.py  test_orchestrator.py
